<resources>
    <string name="app_name">Firebase Authentication Demo</string>
    <!-- Strings related to login -->
    <string name="prompt_email">User name/Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="action_sign_in">Sign-in </string>
    <string name="action_register">Register</string>
    <string name="action_email">Sign in</string>
    <string name="action_password">Password</string>
    <string name="action_confirm_password">Confirm Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register_short">Register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="back_to_sign_in">back to <u>sign-in</u></string>
    <string name="successful_signed_in">You have successfully signed-in to Firebase demo!</string>
    <string name="hi_user">Hi %1$s</string>
    <string name="sign_out">Sign Out</string>
</resources>
